added 'About Me' section

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
 <body>
     <nav class="navbar">
 
-        <h1>Alberto Lawant</h1>
+        <h1><em>Alberto Lawant</em></h1>
         <ul>
             <li>About Me</li>
             <li>Work</li>
@@ -21,9 +21,18 @@
 
     </nav>
 
-    <!--<img src="/Assets/dark_blue.jpg" alt="Dark Blue Stripes">-->
+<img src="./assets/images/893.jpg" alt="Dark Blue Stripes">
+
+<section class="info">
+
+    <h2> About Me </h2>
+
+    <section>
+
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos libero veritatis ex dicta dolores beatae esse eum suscipit ipsa eaque, eius, ducimus veniam iusto excepturi magni id blanditiis voluptatum, officia molestiae aspernatur nesciunt consectetur tempora nobis? Laboriosam debitis neque dolorum quisquam! Maiores est, consequuntur harum consectetur at labore eveniet repellendus laborum tenetur neque, saepe quasi. Ut explicabo repudiandae quisquam nisi suscipit molestiae natus tempore, autem, facilis veritatis exercitationem officiis ea cupiditate cumque porro ipsum dolorem ab iste! Minus, quis. Quae tempore ab hic expedita consectetur perspiciatis mollitia necessitatibus harum corrupti, a aspernatur quaerat quo debitis reprehenderit consequatur, qui, dolore omnis minus. Laborum ipsum molestiae expedita perspiciatis consectetur modi doloribus fugit sunt esse dolorem, reprehenderit voluptatem eligendi earum, sequi nisi. Voluptatum eaque vel quidem officiis doloremque iusto non pariatur nam incidunt provident reiciendis molestiae doloribus veniam odit culpa quo blanditiis exercitationem in, expedita nostrum temporibus voluptas a voluptate laboriosam. Similique, dolores?</p>
 
 
+</section>
 </body>
 
 </html>
