added 'contact info' and banner

--- a/index.html
+++ b/index.html
@@ -21,48 +21,39 @@
 
     </nav>
 
-<section class="image">
+<div class="image-container">
+    <img src="./assets/images/893.jpg" alt="Dark Blue Stripes">
+    <div class="overlay-text">Hello there Obiwan! </div>
+</div>
 
-<img src="./assets/images/893.jpg" alt="Dark Blue Stripes">
 
-<p class="nav-title"> Cool subtitle here! </p>
 
-</section>
 
 <section class="about-me">
-
-    <h2> About Me </h2>
-
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos libero veritatis ex dicta dolores beatae esse eum suscipit ipsa eaque, eius, ducimus veniam iusto excepturi magni id blanditiis voluptatum, officia molestiae aspernatur nesciunt consectetur tempora nobis? Laboriosam debitis neque dolorum quisquam! Maiores est, consequuntur harum consectetur at labore eveniet repellendus laborum tenetur neque, saepe quasi. Ut explicabo repudiandae quisquam nisi suscipit molestiae natus tempore, autem, facilis veritatis exercitationem officiis ea cupiditate cumque porro ipsum dolorem ab iste! Minus, quis. Quae tempore ab hic expedita consectetur perspiciatis mollitia necessitatibus harum corrupti, a aspernatur quaerat quo debitis reprehenderit consequatur, qui, dolore omnis minus. Laborum ipsum molestiae expedita perspiciatis consectetur modi doloribus fugit sunt esse dolorem, reprehenderit voluptatem eligendi earum, sequi nisi. Voluptatum eaque vel quidem officiis doloremque iusto non pariatur nam incidunt provident reiciendis molestiae doloribus veniam odit culpa quo blanditiis exercitationem in, expedita nostrum temporibus voluptas a voluptate laboriosam. Similique, dolores?</p>
-
-    <h2> Work </h2>
-
+   <h2> About <br> Me </br> </h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos libero veritatis ex dicta dolores beatae esse eum suscipit ipsa eaque, eius, ducimus veniam iusto excepturi magni id blanditiis voluptatum, officia molestiae aspernatur nesciunt consectetur tempora nobis? Laboriosam debitis neque dolorum quisquam! Maiores est, consequuntur harum consectetur at labore eveniet repellendus laborum tenetur neque, saepe quasi. Ut explicabo repudiandae quisquam nisi suscipit molestiae natus tempore, autem, facilis veritatis exercitationem officiis ea cupiditate cumque porro ipsum dolorem ab iste! Minus, quis. Quae tempore ab hic expedita consectetur perspiciatis mollitia necessitatibus harum corrupti, a aspernatur quaerat quo debitis reprehenderit consequatur, qui, dolore omnis minus. Laborum ipsum molestiae expedita perspiciatis consectetur modi doloribus fugit sunt esse dolorem, reprehenderit voluptatem eligendi earum, sequi nisi. Voluptatum eaque vel quidem officiis doloremque iusto non pariatur nam incidunt provident reiciendis molestiae doloribus veniam odit culpa quo blanditiis exercitationem in, expedita nostrum temporibus voluptas a voluptate laboriosam. Similique, dolores?</p>
+        <h2> Work </h2>
 </section>
 
 <div class="container">
-    <div class="box-1"> Box 1 </div>
-    <div class="box-2"> Box 2 </div>
-    <div class="box-3"> Box 3 </div>
-    <div class="box-4"> Box 4 </div>
-    <div class="box-5"> Box 5 </div>
-
+    <img class="box-1" src="./assets/images/surf.jpg" alt="surfing">
+    <img class="box-2" src="./assets/images/neon.jpg" alt="led wall">
+    <img class="box-3" src="./assets/images/calculator.jpg" alt="calculator">
+    <img class="box-4" src="./assets/images/puzzle.jpg" alt="puzzle">
+    <img class="box-5" src="./assets/images/runners.jpg" alt="running">
 </div>
 
-<h2>Contact Me</h2>
+<h2>Contact <br> Me </br> </h2>
 
-<section class="contact-info">
-
-<ul>
-
-    <li>555.555.5555</li>
-    <li>alberto_lawant@gmail.com</li>
-    <li>GitHub</li>
-
+<div>
+<ul class="contact">
+    <li class="phone-number">555.555.5555</li>
+    <li class="email">alberto_lawant@gmail.com</li>
+    <li class="github">GitHub</li>
+    <li class="twitter"> Twitter </li>
+    <li class="spotify"> Spotify</li>
 </ul>
-
-</section>
-
-
+</div>
 
 </body>
 
