--- a/index.html
+++ b/index.html
@@ -32,44 +32,54 @@
         <section class="about-me">
             <h2> About Me </h2>
             <div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos libero veritatis ex dicta dolores
-                beatae esse eum suscipit ipsa eaque, eius, ducimus veniam iusto excepturi magni id blanditiis
-                voluptatum, officia molestiae aspernatur nesciunt consectetur tempora nobis? Laboriosam debitis neque
-                dolorum quisquam! Maiores est, consequuntur harum consectetur at labore eveniet repellendus laborum
-                tenetur neque, saepe quasi. Ut explicabo repudiandae quisquam nisi suscipit molestiae natus tempore,
-                autem, facilis veritatis exercitationem officiis ea cupiditate cumque porro ipsum dolorem ab iste!<br>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos libero veritatis ex dicta
+                    dolores
+                    beatae esse eum suscipit ipsa eaque, eius, ducimus veniam iusto excepturi magni id blanditiis
+                    voluptatum, officia molestiae aspernatur nesciunt consectetur tempora nobis? Laboriosam debitis
+                    neque
+                    dolorum quisquam! Maiores est, consequuntur harum consectetur at labore eveniet repellendus laborum
+                    tenetur neque, saepe quasi. Ut explicabo repudiandae quisquam nisi suscipit molestiae natus tempore,
+                    autem, facilis veritatis exercitationem officiis ea cupiditate cumque porro ipsum dolorem ab
+                    iste!<br>
 
-                Minus, quis. Quae tempore ab hic expedita consectetur perspiciatis mollitia necessitatibus harum
-                corrupti, a aspernatur quaerat quo debitis reprehenderit consequatur, qui, dolore omnis minus. Laborum
-                ipsum molestiae expedita perspiciatis consectetur modi doloribus fugit sunt esse dolorem, reprehenderit
-                voluptatem eligendi earum, sequi nisi. Voluptatum eaque vel quidem officiis doloremque iusto non
-                pariatur nam incidunt provident reiciendis molestiae doloribus veniam odit culpa quo blanditiis
-                exercitationem in, expedita nostrum temporibus voluptas a voluptate laboriosam. Similique, dolores?</p>
+                    <br>Minus, quis. Quae tempore ab hic expedita consectetur perspiciatis mollitia necessitatibus harum
+                    corrupti, a aspernatur quaerat quo debitis reprehenderit consequatur, qui, dolore omnis minus.
+                    Laborum
+                    ipsum molestiae expedita perspiciatis consectetur modi doloribus fugit sunt esse dolorem,
+                    reprehenderit
+                    voluptatem eligendi earum, sequi nisi. Voluptatum eaque vel quidem officiis doloremque iusto non
+                    pariatur nam incidunt provident reiciendis molestiae doloribus veniam odit culpa quo blanditiis
+                    exercitationem in, expedita nostrum temporibus voluptas a voluptate laboriosam. Similique, dolores?
+                </p>
             </div>
         </section>
         <section>
             <h2>Work</h2>
-            <div class="container">
-                <img class="box-1" src="./assets/images/surf.jpg" alt="surfing">
-                <img class="box-2" src="./assets/images/neon.jpg" alt="led wall">
-                <img class="box-3" src="./assets/images/calculator.jpg" alt="calculator">
-                <img class="box-4" src="./assets/images/puzzle.jpg" alt="puzzle">
-                <img class="box-5" src="./assets/images/runners.jpg" alt="running">
-            </div>
+            <div class="cards">
+                <div class="big-card">
+                    <a href="https://parryprogramming.github.io/code_refactor/">Code Refactor HTML/CSS</a>
+                </div>
+                <div class="small-cards">
+                    <div class="card">
+                        <a href="https://parryprogramming.github.io/code_refactor/">Coming Soon</a>
+                    </div>
+                    <div class="card">
+                        <a href="https://parryprogramming.github.io/code_refactor/">Coming Soon</a>
+                    </div>
+                    <div class="card">
+                        <a href="https://parryprogramming.github.io/code_refactor/">Coming Soon</a>
+                    </div>
+                    <div class="card">
+                        <a href="https://parryprogramming.github.io/code_refactor/">Coming Soon</a>
+                    </div>
+                </div>
         </section>
         <section>
-            <h2>Contact Me </h2>
-            <div>
-            <ul class="contact">
-                <li class="phone-number">555.555.5555</li>
-                <li class="email">alberto_lawant@gmail.com</li>
-                <li class="github">GitHub</li>
-                <li class="twitter"> Twitter </li>
-                <li class="spotify"> Spotify</li>
-            </ul>
-        </div>
+            
+                <h2>Contact Me </h2>
+        
         </section>
-        </main>
+    </main>
 </body>
 
 </html>
