updated footer and work section, as well as navbar

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
         <h1><em>Alberto Lawant</em></h1>
         <ul>
-            <li>About Me</li>
-            <li>Work</li>
-            <li>Contact Me</li>
-            <li>Resume</li>
+            <li> <a class="nav-about" href="#"> About Me </a></li>
+            <li> <a class="nav-work" href="#"> Work</a></li>
+            <li> <a class="nav-contact" href="#">Contact Me</a></li>
+            <li> <a class="nav-resume" href="#">Resume</a></li>
         </ul>
 
     </nav>
 
     <div class="image-container">
         <img src="./assets/images/dark_blue.jpg" alt="Dark Blue Stripes">
-        <div class="overlay-text">Hello there Obiwan! </div>
+        <div class="overlay-text">WELCOME TO MY WEBSITE!!! 🔥 </div>
     </div>
 
 
@@ -76,9 +76,17 @@
         </section>
         <section>
             <h2>Contact Me </h2>
-
-
         </section>
+
+        <footer>
+            <ul>
+                <li><a class="number" href="#">555.555.5555</a></li>
+                <li><a class="email" href="#">Alberto_lawant@gmail.com</a></li>
+                <li><a class="github" href="https://github.com/parryprogramming">GitHub</a></li>
+                <li><a class="twitter" href="#">Twitter</a></li>
+                <li><a class="spotify" href="#">Spotify</a></li>
+            </ul>
+        </footer>
     </main>
 </body>
 
